fix relative paths

--- a/mathtrade-bh/o-que-e.html
+++ b/mathtrade-bh/o-que-e.html
@@ -12,7 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="./src/styles/main.scss" />
+    <link rel="stylesheet" href="../src/styles/main.scss" />
     <link rel="icon" type="image/png" href="./favicon.ico">
 </head>
 
@@ -22,7 +22,7 @@
         <!-- Logo -->
         <div class="h-full">
             <a href="./">
-                <img class="h-full w-auto" src="./src/img/logo/bgbh-com-sombra.png" alt="Logo BGBH">
+                <img class="h-full w-auto" src="../src/img/logo/bgbh-com-sombra.png" alt="Logo BGBH">
             </a>
         </div>
 
@@ -74,7 +74,7 @@
     <!-- BANNER PRINCIPAL -->
     <header class="header_mathtrade">
         <div class="imagemTopo">
-            <img src="./src/img/mathtrade/imagem-topo.png" alt="Math Trade BGBH" />
+            <img src="../src/img/mathtrade/imagem-topo.png" alt="Math Trade BGBH" />
         </div>
     </header>
 
@@ -333,7 +333,7 @@
                     CONHEÇA REGRAS GERAIS PARA OFERTAR SEUS JOGOS E FAZER SUAS TROCAS
                 </h2>
                 <a href="./mathtrade-bh/regras-gerais" class="text-center w-1/2 mt-2">
-                    <img src="./src/img/mathtrade/regras-gerais-math-trade.jpeg"
+                    <img src="../src/img/mathtrade/regras-gerais-math-trade.jpeg"
                         alt="Regras Gerais de uma Math Trade" />
                 </a>
             </div>
@@ -344,7 +344,7 @@
                     FIQUE POR DENTRO DE TUDO CLICANDO NA IMAGEM ABAIXO.
                 </h2>
                 <a href="./mathtrade-bh/edicao-novembro-2024" class="text-center w-1/2 mt-2">
-                    <img src="./src/img/mathtrade/615x330-MT9.png" alt="Regras Math Trade Nona Edição" />
+                    <img src="../src/img/mathtrade/615x330-MT9.png" alt="Regras Math Trade Nona Edição" />
                 </a>
             </div>
         </section>
@@ -498,11 +498,11 @@
                 <ul class="list-disc pl-6">
                     <li>
                         Vá até a lista dos jogos sincronizados, clicando no ícone
-                        <img src="./img/math-trade/step3.jpeg" alt="step 3" class=" h-6 inline-block">
+                        <img src="../img/math-trade/step3.jpeg" alt="step 3" class=" h-6 inline-block">
                     </li>
                     <li>
                         Clique no ícone
-                        <img src="./img/math-trade/1click.png" alt="add item" class=" h-6 inline-block">
+                        <img src="../img/math-trade/1click.png" alt="add item" class=" h-6 inline-block">
                         para cada jogo que deseja incluir na lista dos jogos que pretende
                         receber. (Pode também clicar no botão "Add")
                     </li>
@@ -525,7 +525,7 @@
                     <br>
                     As <b>colunas</b> correspondem aos seus jogos que você adicionou na <b>GeekList</b> durante a
                     primeira etapa.
-                    <img src="./img/math-trade/exemplo-tabela.png" alt="tabela de trocas">
+                    <img src="../img/math-trade/exemplo-tabela.png" alt="tabela de trocas">
                 </p>
                 <p class="mt-2">
                     Marcar o quadradinho indica que:
@@ -585,7 +585,7 @@
                         Em seguida, clicar no botão <span class="italic font-semibold">"Submit My Wants"</span> .
                     </li>
                 </ul>
-                <img src="./img/math-trade/how-to-submit.png" alt="submiter lista de trocas">
+                <img src="../img/math-trade/how-to-submit.png" alt="submiter lista de trocas">
                 <p>
                     Após clicar no "Submit My Wants" é apresentada uma
                     <b>mensagem de confirmação</b> de envio da sua lista e você receberá uma mensagem no
@@ -646,7 +646,7 @@
         </div>
     </div>
 
-    <script type="module" src="./src/js/main.js"></script>
+    <script type="module" src="../src/js/main.js"></script>
     <script>
         let scrollPosition = 0;
 
