--- a/bgbh-masters/index.html
+++ b/bgbh-masters/index.html
@@ -12,7 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="./src/styles/main.scss" />
+    <link rel="stylesheet" href="../src/styles/main.scss" />
 </head>
 
 <body>
@@ -21,7 +21,7 @@
         <!-- Logo -->
         <div class="h-full">
             <a href="./">
-                <img class="h-full w-auto" src="./src/img/logo/bgbh-com-sombra.png" alt="Logo BGBH">
+                <img class="h-full w-auto" src="../src/img/logo/bgbh-com-sombra.png" alt="Logo BGBH">
             </a>
         </div>
 
@@ -35,7 +35,7 @@
             id="hamburger-menu">
             <div class="flex justify-between">
                 <a href="./">
-                    <img class="h-[40px] w-auto" src="./src/img/logo/bgbh-com-sombra.png" alt="Logo BGBH">
+                    <img class="h-[40px] w-auto" src="../src/img/logo/bgbh-com-sombra.png" alt="Logo BGBH">
                 </a>
                 <i class="bi bi-x-lg cursor-pointer" id="close-menu"></i>
             </div>
@@ -74,7 +74,7 @@
         <div class="bg-black absolute top-0 h-[calc(100vh-56px)] w-full opacity-65"></div>
         <!-- BANNER PRINCIPAL -->
         <div class="flex flex-col items-center justify-center relative h-[calc(80vh-56px)] text-white">
-            <img class="h-[150px]" src="./src/img/logo/bgbh-com-sombra.png" alt="Logo BGBH">
+            <img class="h-[150px]" src="../src/img/logo/bgbh-com-sombra.png" alt="Logo BGBH">
             <span class="mt-5">O seu portal de jogos de tabuleiro</span>
             <div class="flex justify-around px-5 w-full mt-20 font-[600] text-2xl">
                 <section class="flex flex-col items-center gap-5 px-2 text-center">
@@ -159,8 +159,8 @@
         </div>
     </footer>
 
-    <script type="module" src="./src/js/main.js"></script>
-    <script type="module" src="./src/js/home.js"></script>
+    <script type="module" src="../src/js/main.js"></script>
+    <script type="module" src="../src/js/home.js"></script>
 </body>
 
 </html>
