--- a/bgbh-masters/index.html
+++ b/bgbh-masters/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Boardgame BH</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,7 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="../src/styles/main.scss" />
+    <link rel="stylesheet" href="/src/styles/main.scss" />
 </head>
 
 <body>
@@ -20,8 +20,8 @@
         class="sticky top-0 shadow-md z-50 px-4 py-3 flex items-center justify-between h-14 bg-black border-b-[#198754] border-b">
         <!-- Logo -->
         <div class="h-full">
-            <a href="./">
-                <img class="h-full w-auto" src="../src/img/logo/bgbh-com-sombra.png" alt="Logo BGBH">
+            <a href="/">
+                <img class="h-full w-auto" src="/src/img/logo/bgbh-com-sombra.png" alt="Logo BGBH">
             </a>
         </div>
 
@@ -34,47 +34,47 @@
         <div class="absolute w-full bg-black p-5 flex-col gap-5 top-0 left-0 hidden animate__animated animate__slideInDown text-white md:hidden"
             id="hamburger-menu">
             <div class="flex justify-between">
-                <a href="./">
-                    <img class="h-[40px] w-auto" src="../src/img/logo/bgbh-com-sombra.png" alt="Logo BGBH">
+                <a href="/">
+                    <img class="h-[40px] w-auto" src="/src/img/logo/bgbh-com-sombra.png" alt="Logo BGBH">
                 </a>
                 <i class="bi bi-x-lg cursor-pointer" id="close-menu"></i>
             </div>
-            <a href="./" class="hover:text-gray-400">Início</a>
-            <a href="./em-breve.html" class="hover:text-gray-400">Sobre</a>
-            <a href="./em-breve.html" class="hover:text-gray-400">Math Trade BH</a>
-            <a href="./em-breve.html" class="hover:text-gray-400">Iniciativas BGBH</a>
-            <a href="./em-breve.html" class="hover:text-gray-400">Eventos</a>
-            <a href="./em-breve.html" class="hover:text-gray-400">Contato</a>
+            <a href="/" class="hover:text-gray-400">Início</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Sobre</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Math Trade BH</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Iniciativas BGBH</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Eventos</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Contato</a>
         </div>
 
         <!-- Menu MD/LG -->
         <div class="hidden text-white space-x-8 md:items-center md:flex">
-            <a href="./" class="hover:text-gray-400">Início</a>
-            <a href="./em-breve.html" class="hover:text-gray-400">Sobre</a>
-            <a href="./em-breve.html" class="hover:text-gray-400">Math Trade BH</a>
+            <a href="/" class="hover:text-gray-400">Início</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Sobre</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Math Trade BH</a>
             <div class="relative group">
                 <span class="hover:text-gray-400">Iniciativas BGBH</span>
                 <div
                     class="w-36 absolute left-0 hidden mt-0 space-y-2 bg-white shadow-md group-hover:block hover:block">
-                    <a href="./em-breve.html" class="text-sm block px-4 py-2 text-gray-800 hover:bg-gray-200">Joga no
+                    <a href="/em-breve.html" class="text-sm block px-4 py-2 text-gray-800 hover:bg-gray-200">Joga no
                         QG!</a>
-                    <a href="./em-breve.html" class="text-sm block px-4 py-2 text-gray-800 hover:bg-gray-200">
+                    <a href="/em-breve.html" class="text-sm block px-4 py-2 text-gray-800 hover:bg-gray-200">
                         Resenha com Jogatina
                     </a>
-                    <a href="./em-breve.html" class="text-sm block px-4 py-2 text-gray-800 hover:bg-gray-200">
+                    <a href="/em-breve.html" class="text-sm block px-4 py-2 text-gray-800 hover:bg-gray-200">
                         Outras iniciativas
                     </a>
                 </div>
             </div>
-            <a href="./em-breve.html" class="hover:text-gray-400">Eventos</a>
-            <a href="./em-breve.html" class="hover:text-gray-400">Contato</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Eventos</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Contato</a>
         </div>
     </nav>
     <header class="header-home h-[calc(100vh-56px)] relative flex flex-col items-center justify-evenly">
         <div class="bg-black absolute top-0 h-[calc(100vh-56px)] w-full opacity-65"></div>
         <!-- BANNER PRINCIPAL -->
         <div class="flex flex-col items-center justify-center relative h-[calc(80vh-56px)] text-white">
-            <img class="h-[150px]" src="../src/img/logo/bgbh-com-sombra.png" alt="Logo BGBH">
+            <img class="h-[150px]" src="/src/img/logo/bgbh-com-sombra.png" alt="Logo BGBH">
             <span class="mt-5">O seu portal de jogos de tabuleiro</span>
             <div class="flex justify-around px-5 w-full mt-20 font-[600] text-2xl">
                 <section class="flex flex-col items-center gap-5 px-2 text-center">
@@ -159,8 +159,8 @@
         </div>
     </footer>
 
-    <script type="module" src="../src/js/main.js"></script>
-    <script type="module" src="../src/js/home.js"></script>
+    <script type="module" src="/src/js/main.js"></script>
+    <script type="module" src="/src/js/home.js"></script>
 </body>
 
 </html>
