--- a/mathtrade-bh/o-que-e.html
+++ b/mathtrade-bh/o-que-e.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Boardgame BH</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,7 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="../src/styles/main.scss" />
+    <link rel="stylesheet" href="/src/styles/main.scss" />
     <link rel="icon" type="image/png" href="./favicon.ico">
 </head>
 
@@ -21,8 +21,8 @@
         class="sticky top-0 shadow-md z-50 px-4 py-3 flex items-center justify-between h-14 bg-black border-b-[#198754] border-b">
         <!-- Logo -->
         <div class="h-full">
-            <a href="./">
-                <img class="h-full w-auto" src="../src/img/logo/bgbh-com-sombra.png" alt="Logo BGBH">
+            <a href="/">
+                <img class="h-full w-auto" src="/src/img/logo/bgbh-com-sombra.png" alt="Logo BGBH">
             </a>
         </div>
 
@@ -35,46 +35,46 @@
         <div class="absolute w-full bg-black p-5 flex-col gap-5 top-0 left-0 hidden animate__animated animate__slideInDown text-white md:hidden"
             id="hamburger-menu">
             <div class="flex justify-between">
-                <a href="./">
+                <a href="/">
                     <img class="h-[40px] w-auto" src="src/img/logo/bgbh-com-sombra.png" alt="Logo BGBH">
                 </a>
                 <i class="bi bi-x-lg cursor-pointer" id="close-menu"></i>
             </div>
-            <a href="./" class="hover:text-gray-400">Início</a>
-            <a href="./em-breve.html" class="hover:text-gray-400">Sobre</a>
-            <a href="./em-breve.html" class="hover:text-gray-400">Math Trade BH</a>
-            <a href="./em-breve.html" class="hover:text-gray-400">Iniciativas BGBH</a>
-            <a href="./em-breve.html" class="hover:text-gray-400">Eventos</a>
-            <a href="./em-breve.html" class="hover:text-gray-400">Contato</a>
+            <a href="/" class="hover:text-gray-400">Início</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Sobre</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Math Trade BH</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Iniciativas BGBH</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Eventos</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Contato</a>
         </div>
 
         <!-- Menu MD/LG -->
         <div class="hidden text-white space-x-8 md:items-center md:flex">
-            <a href="./" class="hover:text-gray-400">Início</a>
-            <a href="./em-breve.html" class="hover:text-gray-400">Sobre</a>
-            <a href="./em-breve.html" class="hover:text-gray-400">Math Trade BH</a>
+            <a href="/" class="hover:text-gray-400">Início</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Sobre</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Math Trade BH</a>
             <div class="relative group">
                 <span class="hover:text-gray-400">Iniciativas BGBH</span>
                 <div
                     class="w-36 absolute left-0 hidden mt-0 space-y-2 bg-white shadow-md group-hover:block hover:block">
-                    <a href="./em-breve.html" class="text-sm block px-4 py-2 text-gray-800 hover:bg-gray-200">Joga
+                    <a href="/em-breve.html" class="text-sm block px-4 py-2 text-gray-800 hover:bg-gray-200">Joga
                         no QG!</a>
-                    <a href="./em-breve.html" class="text-sm block px-4 py-2 text-gray-800 hover:bg-gray-200">
+                    <a href="/em-breve.html" class="text-sm block px-4 py-2 text-gray-800 hover:bg-gray-200">
                         Resenha com Jogatina
                     </a>
-                    <a href="./em-breve.html" class="text-sm block px-4 py-2 text-gray-800 hover:bg-gray-200">
+                    <a href="/em-breve.html" class="text-sm block px-4 py-2 text-gray-800 hover:bg-gray-200">
                         Outras iniciativas
                     </a>
                 </div>
             </div>
-            <a href="./em-breve.html" class="hover:text-gray-400">Eventos</a>
-            <a href="./em-breve.html" class="hover:text-gray-400">Contato</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Eventos</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Contato</a>
         </div>
     </nav>
     <!-- BANNER PRINCIPAL -->
     <header class="header_mathtrade">
         <div class="imagemTopo">
-            <img src="../src/img/mathtrade/imagem-topo.png" alt="Math Trade BGBH" />
+            <img src="/src/img/mathtrade/imagem-topo.png" alt="Math Trade BGBH" />
         </div>
     </header>
 
@@ -332,9 +332,8 @@
                     <br>
                     CONHEÇA REGRAS GERAIS PARA OFERTAR SEUS JOGOS E FAZER SUAS TROCAS
                 </h2>
-                <a href="./mathtrade-bh/regras-gerais" class="text-center w-1/2 mt-2">
-                    <img src="../src/img/mathtrade/regras-gerais-math-trade.jpeg"
-                        alt="Regras Gerais de uma Math Trade" />
+                <a href="/mathtrade-bh/regras-gerais" class="text-center w-1/2 mt-2">
+                    <img src="/src/img/mathtrade/regras-gerais-math-trade.jpeg" alt="Regras Gerais de uma Math Trade" />
                 </a>
             </div>
             <div class="flex flex-col gap-3 items-center w-full">
@@ -343,8 +342,8 @@
                     <br>
                     FIQUE POR DENTRO DE TUDO CLICANDO NA IMAGEM ABAIXO.
                 </h2>
-                <a href="./mathtrade-bh/edicao-novembro-2024" class="text-center w-1/2 mt-2">
-                    <img src="../src/img/mathtrade/615x330-MT9.png" alt="Regras Math Trade Nona Edição" />
+                <a href="/mathtrade-bh/edicao-novembro-2024" class="text-center w-1/2 mt-2">
+                    <img src="/src/img/mathtrade/615x330-MT9.png" alt="Regras Math Trade Nona Edição" />
                 </a>
             </div>
         </section>
@@ -498,11 +497,11 @@
                 <ul class="list-disc pl-6">
                     <li>
                         Vá até a lista dos jogos sincronizados, clicando no ícone
-                        <img src="../img/math-trade/step3.jpeg" alt="step 3" class=" h-6 inline-block">
+                        <img src="/img/math-trade/step3.jpeg" alt="step 3" class=" h-6 inline-block">
                     </li>
                     <li>
                         Clique no ícone
-                        <img src="../img/math-trade/1click.png" alt="add item" class=" h-6 inline-block">
+                        <img src="/img/math-trade/1click.png" alt="add item" class=" h-6 inline-block">
                         para cada jogo que deseja incluir na lista dos jogos que pretende
                         receber. (Pode também clicar no botão "Add")
                     </li>
@@ -525,7 +524,7 @@
                     <br>
                     As <b>colunas</b> correspondem aos seus jogos que você adicionou na <b>GeekList</b> durante a
                     primeira etapa.
-                    <img src="../img/math-trade/exemplo-tabela.png" alt="tabela de trocas">
+                    <img src="/img/math-trade/exemplo-tabela.png" alt="tabela de trocas">
                 </p>
                 <p class="mt-2">
                     Marcar o quadradinho indica que:
@@ -585,7 +584,7 @@
                         Em seguida, clicar no botão <span class="italic font-semibold">"Submit My Wants"</span> .
                     </li>
                 </ul>
-                <img src="../img/math-trade/how-to-submit.png" alt="submiter lista de trocas">
+                <img src="/img/math-trade/how-to-submit.png" alt="submiter lista de trocas">
                 <p>
                     Após clicar no "Submit My Wants" é apresentada uma
                     <b>mensagem de confirmação</b> de envio da sua lista e você receberá uma mensagem no
@@ -646,7 +645,7 @@
         </div>
     </div>
 
-    <script type="module" src="../src/js/main.js"></script>
+    <script type="module" src="/src/js/main.js"></script>
     <script>
         let scrollPosition = 0;
 
