bgbh masters page

--- a/index.html
+++ b/index.html
@@ -203,8 +203,12 @@
     <section class="py-5 max-w-[90vw] mx-auto" id="parceiros">
       <h2 class="font-extrabold text-2xl text-gray-900">PARCEIROS</h2>
       <div class="flex gap-10">
-        <img class="size-28" src="/src/img/parceiros/cuidadocomopanda.png" alt="Cuidado com o Panda">
-        <img class="size-28" src="/src/img/parceiros/logo_VJBG_fundo_transparente.png" alt="Vamos Jogar Boardgame">
+        <a href="https://www.instagram.com/cuidadocomopanda/" target="_blank">
+          <img class="size-28" src="/src/img/parceiros/cuidadocomopanda.png" alt="Cuidado com o Panda">
+        </a>
+        <a href="https://www.instagram.com/vamosjogarboardgame/" target="_blank">
+          <img class="size-28" src="/src/img/parceiros/logo_VJBG_fundo_transparente.png" alt="Vamos Jogar Boardgame">
+        </a>
       </div>
     </section>
   </main>
